--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,12 @@
 <html>
+    <head>
+    <meta charset="utf-8" />
+    <title>Version Control System</title>
+    </head>
     <body>
-        <h4>Index-Hello</h4>
+            <form action="/submit-Command-data" method="post">
+                Command: <input name="command" type="text" /> <br />
+                <input type="submit" />
+            </form>
     </body>
 </html>
