--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,9 @@
     <title>Version Control System</title>
     </head>
     <body>
-            <form action="/submit-Command-data" method="post">
+            <form action="/submit-Command-data" method="post" ref='uploadForm' id='uploadForm' encType="multipart/form-data">
                 Command: <input name="command" type="text" /> <br />
+                <input type="file" name="filetocheckin" />
                 <input type="submit" />
             </form>
     </body>
